# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.71 2004/07/13 14:06:44 zhen Exp $

  13 Jul 2004; <zhen@gentoo.org> livecd/runscript-support/livecdfs-update.sh:
  changed the behavior of rcadd/ rcdel. it was getting hokey to have to add the
  default rc'ed programs when only one change was required to rcadd. so I
  changed it so that the defaults are *always* loaded and specified additions/
  deletions are just added on top of those.

  12 Jul 2004; John Davis <zhen@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  changing the more verbose behavior to the -V (verbose) flag

  12 Jul 2004; <zhen@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  the -d (debug) flag now makes catalyst calculate an emerge -vp of the packages
  it is about to merge so that deps and USE flags are more evident

  11 Jul 2004; <zhen@gentoo.org> +catalyst, -catalyst.new.py,
  modules/catalyst_support.py:
  completely rewrote the catalyst main script so that it can actually utilize
  more than one command line flag. new functionality included, but not active
  yet (--debug and --verbose). arguments can still be passed on the commandline
  through the use of the -C (--cli) flag. updated the arg_parse function in
  catalyst_support.py to accomodate my changes.

  02 Jul 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
  modules/generic_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,